2008-08-14  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Torrent/Banshee.Torrent/TorrentService.cs: Fix
	style issues.

2008-08-13  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Extensions.mds:
	* src/Extensions/Makefile.am:
	* src/Extensions/Banshee.Torrent/Banshee.Torrent.mdp:
	* src/Extensions/Banshee.Torrent/Banshee.Torrent/TorrentService.cs:
	* src/Extensions/Banshee.Torrent/Banshee.Torrent/TorrentFileDownloadTask.cs:
	* src/Extensions/Banshee.Torrent/Makefile.am:
	* src/Extensions/Banshee.Torrent/Banshee.Torrent.addin.xml:
	* build/m4/banshee/torrent.m4:
	* build/build.environment.mk:
	* configure.ac: Patch from Alan McGovern adding support for downloading
	.torrent podcast enclosures, with some build/style fixes by me.  Is not
	built by default (requires --enable-torrent option) and probably not
	buildable at all except within MonoDevelop.  Still under development, do
	not enable unless you know what you're doing.

2008-08-13  Gabriel Burt  <gabriel.burt@gmail.com>

	Patch from Alan McGovern laying the groundwork for torrent support in Migo.

	* src/Libraries/Migo/Migo.DownloadCore/DownloadManager.cs: Add support for
	other types of DownloadTasks.

	* src/Libraries/Migo/Migo.Syndication/FeedEnclosure.cs: Strip the trailing
	.torrent extension for the file name.

2008-08-12  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.NowPlaying/Banshee.NowPlaying/VideoDisplay.cs:
	Fix a NRE in the cover art display when the ArtworkId for a track is null
	(BGO #547520).

2008-08-12  Aaron Bockover  <abock@gnome.org>

	Banshee 1.2.1 Released

2008-08-12  Aaron Bockover  <abock@gnome.org>

	* configure.ac: Bump version to 1.2.1

	* NEWS: Update

	* src/Extensions/Banshee.SqlDebugConsole/Makefile.am:
	* src/Extensions/Makefile.am: Fix build

2008-08-12  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Recommendations/RecommendationPane.cs: